# agesa-azure-day

./: .dockerignore  .gitignore  Dockerfile  README.md
backend/: .env.example  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py  seed.py
frontend/: .env.example  index.html  nginx.conf.template  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/api/: client.js
frontend/src/router/: index.js
frontend/src/utils/: labels.js
frontend/src/views/: ClaimsView.vue  CustomersView.vue  DashboardView.vue  PoliciesView.vue
k8s/: deployment.yaml  hubble-ui.yaml  ingress.yaml  secret.yaml  service.yaml
